@startuml

title __DAO's Class Diagram__\n

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAO {
        {abstract} + add()
        {abstract} + delete()
        {abstract} + getAll()
        {abstract} + getById()
        {abstract} + update()
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOEspecie {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOExcursio {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOSoci {
        {abstract} + findSociByUserNameAndPassword()
    }
  }
  
ub.edu.resources.dao.DAOEspecie -up-|> ub.edu.resources.dao.DAO : inherits
    ub.edu.resources.dao.DAOExcursio -up-|> ub.edu.resources.dao.DAO : inherits
    ub.edu.resources.dao.DAOSoci -up-|> ub.edu.resources.dao.DAO : inherits



right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
